15. LIST LOG now streams its data for extreme speed.
16. Players more than 10X fatigued will have a 1% chance/tick to fall under the sleep spell.
17. New Spells: Dispel Divination, Teleport Object
18. Players will be notified when users on FRIENDS list log off, just like logins.
19. FieryRoom Behavior tick parms apply to damage now, instead of room destruction (other parms for that anyway).
20. CL Player Editor now allows Quest-Scripts to be Removed manually (to fix players with bad quest scripts attached to them)
21. MG Catalog Manager will now show "most popular" area for stuff, and allows sorting by column
22. Common text files (intro.txt, newchar.txt, rules.txt, etc) are sent through webmacro system now -- add macros!
23. Behavior MobReSave now saves/restores a mobs charstats.
24. Thief Mark skill can now unmark, BodyPiercing can now "heal" piercings, 
    You can Leech yourself now, always Hide from sleeping mobs, and assassinate packs a larger punch.
25. If a cage containing a mob is opened and left open -- the creature will now escape in 30 ticks (2 min)!
26. New Prayer: Sense Alergies 
27. Internal: Some time/CPU control has been implemented for skills that require scanning the whole map (like Teleport
    or Gate, etc.  This means that for large maps, players may notice those skills have gotten much "slower", though 
    in reality, it will help your mud support more people doing such things.
28. New Disable Flags: DBERRORQUESTART, DBERRORQUE, CATALOGCACHE
29. New LIST parameter: SCRIPTS (for finding script usages and scriptables in your world)
30. Help money/currency/etc will show local currency.  help world currency shows all active currencies.
31. Scriptable codes $h/$H $s/$S added to support him/her. LOG command also changed to prevent spoofing.
32. Quests now save their authors, if the questmaker is used.
33. Cooking will now give slightly more specific names to the final recipe (Fried Water Fowl instead of Fried Poultry, etc)
34. 